# metron_ai_catalogue

./: .env  .gitignore  .markdownlint.json  .pre-commit-config.yaml  Dockerfile  README.md  build_container.sh  build_image.sh  cspell.json  post_start.sh  pyproject.toml  run_container.sh  ~.bashrc
.devcontainer/: devcontainer.json  devcontainer_post_start.sh
.dvc/: config
.github/workflows/: build_docs.yml  set_up_catalogue_cpu_env_and_run_base.yml  update_catalogue_cpu_env.yml
ardagen_scenarios/: .gitignore  U-dev|ardagen_mocked_env-C00F00L00P00.yaml.dvc
datasets/: .gitignore  dq_floral_dataset.dvc
datasets/ardagen/: .gitignore  U-deepforge-units|box-trainC00F00L00P00.dvc
datasets/ardagen/development/: .gitignore  U-dev|ardagen_mocked_env-C00F00L00P00.dvc
datasets_in/: dq_floral_set.dvc
docs/: .buildinfo  catalogue.html  development_notes.html  genindex.html  guides.html  index.html  objects.inv  project_installation.html  search.html  searchindex.js
docs/.doctrees/: catalogue.doctree  development_notes.doctree  environment.pickle  guides.doctree  index.doctree  project_installation.doctree
docs/_sources/: catalogue.rst  guides.rst  index.rst  project_installation.md
docs/catalogue/: datasets.html  metron_ai_ardagen.html
docs/datasets/: nemo.html
docs/guides/: container_startup.html  docs_generation.html
docs_src/: catalogue.rst  conf.py  index.rst  project_installation.md
docs_src/catalogue/: datasets.rst
docs_src/guides/: container_startup.md
metron_ai_ardagen/scenarios/: .gitignore  U-deepforge-units|box-trainC00F00L00P00.yaml.dvc
(+17 files in other folders)
