[project]
name = "metron_ai_catalogue"
requires-python = ">=3.12,<3.13"
version = "0.1"

[tool.uv]
python-preference = "only-system"

[project.optional-dependencies]
docs = [
    "myst-parser==1.0.0",
    "sphinx~=5.2",
    "sphinx-book-theme==1.1.0",
    "sphinx-copybutton==0.5.1",
    "sphinx-design==0.3.0",
    "sphinx-subfigure==0.2.4",
    "sphinx-togglebutton==0.3.2",
    "sphinxcontrib-mermaid==0.8.1",
    "sphinxemoji==0.2.0",
]

[dependency-groups]
devtools = [
    "pre-commit>=4.2.0"
]
